namespcae.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terotam

---
apiVersion: v1 
kind: Namespace
metadata:
  name: openobserve
