dozzel.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dozzle
  namespace: terotam
spec:
  selector:
    matchLabels:
      app: dozzle
  template:
    metadata:
      labels:
        app: dozzle
        environment: sandbox
    spec:
      serviceAccountName: pod-viewer
      containers:
        - name: dozzle
          image: amir20/dozzle:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: users-file
              mountPath: /data/users.yml
              subPath: users.yml
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
    volumes:
        - name: users-file
          secret:
            secretName: dozzle-auth
            items:
              - key: users.yml
                path: users.yml
    securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: terotam
spec:
  type: ClusterIP
  selector:
    app: dozzle
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP






# kubectl create secret generic dozzle-users \
#   --from-file=users.yml=users.yml \
#   -n youtube


# users:
#     admin:
#         email: ""
#         name: ""
#         password: $2a$11$XS9YbWbKu/tDX9tB5pNmfuAKp0yKS4/YfbirXQaXYHukhGdKg1rwe
#         filter: ""

#docker run --rm amir20/dozzle dozzle generate astics123


# #kubectl create secret generic dozzle-users \
#   --from-file=users.yml \
#   -n logging
